vendored_parsers/tree-sitter-d/grammar.js
    source_file: ($) =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_def, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: (_$) => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    comment: (_) =>
      token(
        choice(
          seq("//", /(\\+(.|\r?\n)|[^\\\n])*/),
          seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
          // nesting comments, we "only" support 5 levels of nesting
          seq(
            "/+",
            repeat(
              choice(
                /[^+]/,
                /\+[^\/]/,
                seq(
                  "/+",
                  repeat(
                    choice(
                      /[^+]/,
                      /\+[^\/]/,
                      seq(
                        "/+",
                        repeat(
                          choice(
                            /[^+]/,
                            /\+[^\/]/,
                            seq(
                              "/+",
                              repeat(
                                choice(
                                  /[^+]/,
                                  /\+[^\/]/,
                                  seq(
                                    "/+",
                                    repeat(choice(/[^+]/, /\+[^\/]/)),
                                    "+/",
                                  ),
                                ),
                              ),
                              "+/",
                            ),
                          ),
                        ),
                        "+/",
                      ),
                    ),
                  ),
                  "+/",
                ),
              ),
            ),
            "+/",
          ),
        ),
      ),

    //
    // Identifier
    //
    identifier: (_$) => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    //
    // Token String
    //
    char: (_$) => token("char"),
    int: (_$) => token("int"),
    float: (_$) => token("float"),
    string: (_$) => token("string"),
    true: (_$) => token("true"),
    auto: (_$) => token("auto"),
    class: (_$) => token("class"),
    deprecated: (_$) => token("deprecated"),
    else: (_$) => "else",
    enum: (_$) => "enum",
    extern: (_$) => "extern",
    foreach: (_$) => token("foreach"),
    foreach_reverse: (_$) => token("foreach_reverse"),
    if: (_$) => token("if"),
    in: (_$) => token("in"),
    module: (_$) => token("module"),
    out: (_$) => token("out"),
    return: (_$) => token("return"),
    scope: (_$) => token("scope"),
    shared: (_$) => token("shared"),
    struct: (_$) => token("struct"),
    typeid: (_$) => token("typeid"),
    unittest: (_$) => token("unittest"),
    traits: (_$) => token("__traits"),
    vector: (_$) => token("__vector"),

    /**************************************************
     *
     * 3.2 MODULES
     *
     */

    module_def: ($) => seq($.module_declaration, repeat($._declaration)),

    //
    // Module Declarations
    //
    module_declaration: ($) =>
      seq(
        // deprecated attribute can only appear once
        repeat($.at_attribute),
        optional(seq($.deprecated_attribute, repeat($.at_attribute))),
        $.module,
        $.module_fqn,
        ";",
      ),

    module_fqn: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    //
    // Import Declarations
    // Note that 'static import' is not provided for here, because it is
    // ambiguous with the attribute_specifiers. Technically we probably
    // prefer the static to be more tightly bound to the import, but for
    // syntax tree analysis it probably does not matter much.
    //
    _declaration: ($) =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), "{", repeat($._declaration), "}"),
      ),

    variable_declaration: ($) =>
      seq(
        repeat($._attribute),
        repeat($.storage_class),
        $.type,
        commaSep1(choice($.declarator, $.bitfield_declarator)),
        ";",
      ),

    declarator: ($) =>
      prec.right(
        seq(
          $.identifier,
          optional(seq(optional($.template_parameters), "=", $._initializer)),
        ),
      ),

    manifest_constant: ($) =>
      seq(
        repeat($._attribute),
        repeat($.storage_class),
        $.enum,
        repeat($.storage_class),
        optional($.type),
        commaSep1($.manifest_declarator),
        ";",
      ),

    manifest_declarator: ($) =>
      choice(
        seq($.identifier, "=", $._initializer),
        seq($.identifier, $.template_parameters, "=", $._initializer),
      ),

    //
    // Storage Classes
    //
    storage_class: ($) =>
      choice(
        $.linkage_attribute,
        $.align_attribute,
        $.at_attribute,
        $.type_ctor,
        $.deprecated,
        $.static,
        $.extern,
        $.abstract,
        $.final,
        $.override,
        $.synchronized,
        $.auto,
        $.scope,
        $.gshared,
        $.ref,
        $._function_attribute_kwd,
      ),

    //
    // Initializers
    //
    _initializer: ($) => prec.left(choice($._non_void_initializer, $.void)),

    auto_declaration: ($) =>
      prec.right(
        seq(
          repeat($._attribute),
          repeat1($.storage_class),
          commaSep1($._auto_assignment),
          ";",
        ),
      ),

    _auto_assignment: ($) =>
      seq(
        field("variable", $.identifier),
        optional($.template_parameters),
        "=",
        field("value", $._initializer),
      ),

    //
    // Alias Declaration
    //
    type: ($) =>
      prec.right(seq(repeat($.type_ctor), $._type2, repeat($._type_suffix))),

    type_ctor: ($) => choice($.const, $.immutable, $.inout, $.shared),

    _type2: ($) =>
      prec.right(
        choice(
          $.void,
          $._builtin_type,
          $._qualified_id,
          seq(".", $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, ".", $._qualified_id),
          seq($.type_ctor, "(", $.type, ")"),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    vector_type: ($) => seq($.vector, "(", $.type, ")"),

    // aka fundamental type
    _builtin_type: ($) =>
      choice(
        $.bool,
        $.byte,
        $.ubyte,
        $.char,
        $.short,
        $.ushort,
        $.int,
        $.uint,
        $.long,
        $.ulong,
        $.cent, // deprecated
        $.ucent, // deprecated
        $.wchar,
        $.dchar,
        $.float,
        $.double,
        $.real,
        $.ifloat, // deprecated
        $.idouble, // deprecated
        $.ireal, // deprecated
        $.cfloat, // deprecated
        $.cdouble, // deprecated
        $.creal, // deprecated
        $.size_t,
        $.ptrdiff_t,
        $.string,
        $.cstring,
        $.dstring,
        $.wstring,
        $.noreturn,
      ),

    // we call out void specially because it is not always a basic type
    void: (_$) => "void",

    _type_suffix: ($) =>
      prec.right(
        choice(
          "*",
          seq("[", "]"),
          seq("[", $.expression, "]"),
          seq("[", $.expression, "..", $.expression, "]"),
          seq("[", $.type, "]"),
          seq($.delegate, $.parameters, repeat($.member_function_attribute)),
          seq($.function, $.parameters, repeat($._function_attribute)),
        ),
      ),

    deprecated_attribute: ($) =>
      prec.right(seq($.deprecated, optional(seq("(", $.expression, ")")))),

    _attribute: ($) =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_ctor,
          $.private,
          $.package,
          seq($.package, "(", $.module_fqn, ")"),
          $.protected,
          $.public,
          $.export,
          $.static,
          $.extern,
          $.abstract,
          $.final,
          $.override,
          $.synchronized,
          $.auto,
          $.scope,
          $.gshared,
          $.at_attribute,
          $._function_attribute_kwd,
          $.ref,
          $.return,
        ),
      ),

    at_attribute: ($) =>
      prec.right(
        choice(
          seq("@", $.identifier),
          seq("@", $.identifier, $.arguments),
          seq("@", $.template_instance),
          seq("@", $.template_instance, $.arguments),
          seq("@", "(", $._argument_list, ")"),
        ),
      ),

    _function_attribute_kwd: ($) => choice($.nothrow, $.pure),

    linkage_attribute: ($) =>
      prec.right(
        seq(
          $.extern,
          "(",
          choice(
            "C",
            "D",
            "Windows",
            "System",
            seq("Objective", "-", "C"),
            seq("C", "++"),
            // this tecnically permits assignment operations, which is wrong, but simpler
            seq(
              "C",
              "++",
              ",",
              optional(alias($._argument_list, $.namespace_list)),
            ),
            seq("C", "++", ",", $.class),
            seq("C", "++", ",", $.struct),
          ),
          ")",
        ),
      ),

    _argument_list: ($) => prec.right(commaSep1Comma($.expression)),

    arguments: ($) => seq("(", optional($._argument_list), ")"),

    expression_list: ($) => prec.right(commaSep1($._expr)),

    // formally this is AssignExpression, but we use a different
    // structure.  This is just a single expression term, and
    // cannot be used in a comma expression. Expression is
    // used where comma separated expressions are valid.
    //
    // The formal D grammar permits expression lists in many places,
    // but then the compiler rejects almost any attempt to use them.
    // We are electing to reject these in the syntax, rather than
    // in the semantic.  This makes our grammar simpler, and has
    // zero effect on any actual legal code.
    expression: ($) => $._expr,
    _expr: ($) =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $.binary_expression,
          $.ternary_expression,
          $._unary_expr,
        ),
      ),

    primary_expression: ($) =>
      choice(
        seq("(", $.type, ")", ".", $.identifier),
        seq("(", $.type, ")", ".", $.template_instance),
        seq($._builtin_type, ".", $.identifier),
        seq($.void, ".", $.identifier),
        seq("(", $.expression_list, ")"),
        seq($.type_ctor, "(", $.type, ")", ".", $.identifier),
        seq($.vector_type, ".", $.identifier),
      ),

    assert_arguments: ($) =>
      seq(
        $.expression,
        optional(seq(",", commaSep1($.expression))),
        optional(","),
      ),

    //
    // Mixin expression.  The result may be an lvalue.
    //
    typeid_expression: ($) =>
      seq($.typeid, "(", choice($.type, $.expression), ")"),

    raw_string: ($) =>
      choice(
        seq("`", token.immediate(prec(1, /[^`]*/)), token.immediate(/`[cdw]?/)),
        seq(
          'r"',
          token.immediate(prec(1, /[^"]*/)),
          token.immediate(/"[cdw]?/),
        ),
      ),

    quoted_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\]+/)),
            $.escape_sequence,
            $.htmlentity,
          ),
        ),
        token.immediate(/"[cdw]?/),
      ),

    // interpolated strings
    string_literal: ($) =>
      choice(
        $._string,
        $.raw_string,
        $.hex_string,
        $.quoted_string,
        $.token_string,
        $.interpolated_raw_string,
        $.interpolated_quoted_string,
        $.interpolated_token_string,
      ),

    _declarations_and_statements: ($) => repeat1($._declaration_or_statement),

    _declaration_or_statement: ($) => choice($._declaration, $._statement),

    scope_statement: ($) => $._declaration_or_statement,
    block_statement: ($) =>
      seq(
        "{",
        optional($._declarations_and_statements),
        optional($.label),
        "}",
      ),

    expression_statement: ($) => seq($.expression_list, ";"),

    if_statement: ($) =>
      prec.right(
        seq(
          $.if,
          $.if_condition,
          $.consequence,
          optional(seq($.else, $.alternative)),
        ),
      ),

    if_condition: ($) =>
      seq(
        "(",
        choice(
          $._expr,
          seq($.auto, $.identifier, "=", $.expression),
          seq($.scope, $.identifier, "=", $.expression),
          seq(repeat1($.type_ctor), $.identifier, "=", $.expression),
          seq($.type, $.identifier, "=", $.expression), // type constructors already bound to type
        ),
        ")",
      ),

    _foreach: ($) => choice($.foreach, $.foreach_reverse),

    foreach_statement: ($) =>
      choice(
        seq(
          $._foreach,
          "(",
          commaSep1($.foreach_type),
          ";",
          $.expression,
          ")",
          $.body,
        ),
        seq(
          $._foreach,
          "(",
          $.foreach_type,
          ";",
          $.expression,
          "..",
          $.expression,
          ")",
          $.body,
        ),
      ),

    foreach_type: ($) =>
      seq(
        repeat(choice($.ref, $.alias, $.enum, $.scope, $.type_ctor)),
        optional($.type),
        $.identifier,
      ),

    //
    // Switch Statement
    //

    return_statement: ($) => seq($.return, optional($.expression), ";"),

    struct_declaration: ($) =>
      seq(
        repeat($._attribute),
        choice(
          seq($.struct, $.aggregate_body), // anonymous struct
          seq($.struct, $.identifier, ";"),
          seq($.struct, $.identifier, $.aggregate_body),
          seq(
            $.struct,
            $.identifier,
            $.template_parameters,
            optional($.constraint),
            ";",
          ),
          seq(
            $.struct,
            $.identifier,
            $.template_parameters,
            optional($.constraint),
            $.aggregate_body,
          ),
        ),
      ),

    // AnonStructDeclaration inlined above

    aggregate_body: ($) => seq("{", repeat($._declaration), "}"),

    //
    // Struct Initializer
    //
    // renamed to aggregate initializer, as this is used for
    // all aggregate types (classes, enums, interfaces, structs)
    // also struct_member_initializers is inlined here
    aggregate_initializer: ($) =>
      seq("{", optional(commaSep1Comma($.member_initializer)), "}"),

    // struct_member_initializer shortened to member_initializer
    member_initializer: ($) =>
      seq(optional(seq($.identifier, ":")), $._initializer),

    //
    // Postblit
    //
    class_declaration: ($) =>
      seq(
        repeat($._attribute),
        choice(
          seq($.class, $.identifier, optional($.template_parameters), ";"),
          seq($.class, $.identifier, $.aggregate_body),
          seq($.class, $.identifier, ":", $._base_class_list, $.aggregate_body),
          seq(
            $.class,
            $.identifier,
            $.template_parameters,
            optional($.constraint),
            $.aggregate_body,
          ),
          seq(
            $.class,
            $.identifier,
            $.template_parameters,
            optional($.constraint),
            ":",
            $._base_class_list,
            optional($.constraint),
            $.aggregate_body,
          ),
          seq(
            $.class,
            $.identifier,
            $.template_parameters,
            ":",
            $._base_class_list,
            $.constraint,
            $.aggregate_body,
          ),
        ),
      ),
